[fix][dingo-executor] Support ZGC and multi partition parallel execution